:art: feat: add swagger
