# web-api/controllers/login.go
@@ -22,7 +22,7 @@ import (
 // @Accept  json
 // @Produce  json
 // @Param account_name path string true "elephant"
-// @Param body body model.Account true "登录信息"
+// @Param body body model.Account true "登录信息，username和pwd必填"
 // @Success 200 {string} json "{"success":"true","session_id": sId }"
 // @Router /account/login.do/{account_name} [post]
 func SignIn(c *gin.Context) {
@@ -116,9 +116,9 @@ func SignIn(c *gin.Context) {
 // @Description logout by account name and pwd, 请求头中Authorization参数设置为登录时返回的sessionId
 // @Accept  json
 // @Produce  json
-// @Param Authorization header string true "With the bearer started"
-// @Param username query string true "登录用户名"
-// @Param pwd query string true "登录用户密码"
+// @Param Authorization header string true "登录时返回的sessionId"
+// @Param body body model.Account true "登录信息，username和pwd必填"
+// @Success 200 {string} json "{"success":"true","msg": "SignOut is successful"}"
 // @Router /account/logout.do/{account_name} [post]
 func SignOut(c *gin.Context) {
 	// 1. 取出body中的内容
